welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:16: error: not found: value dogHouse
	dogHouse()
        ^MethodsDogHouse:28: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:34: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:44: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:54: error: not found: value dogHouse
		dogHouse();		
                ^