welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def MethodsDogHouse()
{avance()
avance()
left()
avance()
avance()
left()
avance()
avance()
left()
avance()
avance()
left()}
for (i <- 1 to 4)
	{baisseBrosse()
	dogHouse()
	leveBrosse()
	avance()
	avance()
	avance()
	avance()}
